# home-building-regulatory-engine

./: Dockerfile  PLAN.md  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml
backend/: alembic.ini
backend/app/: config.py  main.py
backend/app/api/: admin.py  endpoints.py
backend/app/clients/: cams_client.py  claude_client.py  lacounty_client.py  navigatela_client.py  overpass_client.py
backend/app/db/: models.py  seed_data.py  session.py
backend/app/engine/: adu_preemption.py  geometry_utils.py  panel_fit.py  rule_engine.py  zone_parser.py
backend/app/prompts/: synthesis.py
backend/app/schemas/: admin.py  assessment.py  design_constraints.py
backend/app/services/: assessment_service.py  errors.py  ingestion_pipeline.py  parcel_service.py  pdf_processor.py  synthesis_service.py
backend/migrations/: env.py
backend/scripts/: ingest_regs.py
backend/tests/: conftest.py  test_admin_api.py  test_concurrent_assess.py  test_design_constraints.py  test_geometry.py  test_ingestion.py  test_ingestion_e2e.py  test_panel_fit.py  test_parcel_service.py  test_rule_engine.py  test_street_proximity.py  test_synthesis.py  test_zone_parser.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
infrastructure/terraform/: alb.tf  cloudfront.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  variables.tf  vpc.tf
infrastructure/terraform-poc/: cdn.tf  dev.tfvars  ec2.tf  ecr.tf  network.tf  outputs.tf  ssm.tf  user-data.sh  variables.tf
(+19 files in other folders)
